jenkins-gradle-ci-master/kubernetes/deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-gradle-ci
  labels:
    app: jenkins-gradle-ci
    service: jenkins-gradle-ci
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: jenkins-gradle-ci
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-gradle-ci
  labels:
    app: jenkins-gradle-ci
    version: v1
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: jenkins-gradle-ci
      version: v1
  template:
    metadata:
      labels:
        app: jenkins-gradle-ci
        version: v1
    spec:
      serviceAccountName: sa-jenkins-gradle-ci
      volumes:
        - name: persistent-gradle
          persistentVolumeClaim:
            claimName: gradle-pv-claim
      containers:
        - name: jenkins-gradle-ci
          image: coffeeandit/jenkins-gradle-ci:1.2.5
          resources:
            requests:
              memory: "128Mi"
              cpu: "128m"
            limits:
              memory: "500Mi"
              cpu: "500m"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: persistent-gradle
              mountPath: /mnt/data
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
