jenkins-gradle-ci-master/kubernetes/deploy_sts.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-gradle-ci
  labels:
    app: jenkins-gradle-ci
spec:
  ports:
    - port: 8080
      name: java
  clusterIP: None
  selector:
    app: jenkins-gradle-ci
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins-gradle-ci
spec:
  serviceName: "jenkins-gradle-ci"
  replicas: 3
  selector:
    matchLabels:
      app: jenkins-gradle-ci
  template:
    metadata:
      labels:
        app: jenkins-gradle-ci
    spec:
      containers:
        - name: jenkins-gradle-ci
          image: coffeeandit/jenkins-gradle-ci:1.2.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: java
          volumeMounts:
            - name: java
              mountPath: /mnt/data
  volumeClaimTemplates:
    - metadata:
        name: java
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
